--- a/scripts/Abundance Distribution.ipynb
+++ b/scripts/Abundance Distribution.ipynb
@@ -10,7 +10,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "os.environ[\"MKL_NUM_THREADS\"] = \"1\"\n",
+    "os.environ[\"NUMEXPR_NUM_THREADS\"] = \"1\"\n",
+    "os.environ[\"OMP_NUM_THREADS\"] = \"1\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -25,10 +37,6 @@
    ],
    "source": [
     "from multiprocessing import Pool\n",
-    "import os\n",
-    "os.environ[\"MKL_NUM_THREADS\"] = \"1\"\n",
-    "os.environ[\"NUMEXPR_NUM_THREADS\"] = \"1\"\n",
-    "os.environ[\"OMP_NUM_THREADS\"] = \"1\"\n",
     "from matplotlib import pyplot as plt\n",
     "import matplotlib.colors as mcolors\n",
     "import numpy as np\n",
@@ -40,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -552,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -586,7 +594,159 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = read_data_many(\"au6_or_l4_s127\",\n",
+    "                    [(\"Fe\", \"H\"), (\"O\", \"H\"), (\"O\", \"Fe\")],\n",
+    "                    config)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>[Fe/H]</th>\n",
+       "      <th>[O/H]</th>\n",
+       "      <th>[O/Fe]</th>\n",
+       "      <th>RegionTag</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-0.486870</td>\n",
+       "      <td>-0.155279</td>\n",
+       "      <td>0.331591</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.267994</td>\n",
+       "      <td>0.627976</td>\n",
+       "      <td>0.359982</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.539071</td>\n",
+       "      <td>0.750090</td>\n",
+       "      <td>0.211018</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.167537</td>\n",
+       "      <td>0.449150</td>\n",
+       "      <td>0.281613</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.041838</td>\n",
+       "      <td>0.382879</td>\n",
+       "      <td>0.341041</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1577891</th>\n",
+       "      <td>-1.249794</td>\n",
+       "      <td>-0.986661</td>\n",
+       "      <td>0.263133</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1577892</th>\n",
+       "      <td>-0.863930</td>\n",
+       "      <td>-0.595172</td>\n",
+       "      <td>0.268757</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1577893</th>\n",
+       "      <td>-0.986080</td>\n",
+       "      <td>-0.631168</td>\n",
+       "      <td>0.354913</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1577894</th>\n",
+       "      <td>-1.617198</td>\n",
+       "      <td>-1.325552</td>\n",
+       "      <td>0.291646</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1577895</th>\n",
+       "      <td>-0.975551</td>\n",
+       "      <td>-0.767183</td>\n",
+       "      <td>0.208368</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1577721 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           [Fe/H]     [O/H]    [O/Fe]  RegionTag\n",
+       "0       -0.486870 -0.155279  0.331591          1\n",
+       "1        0.267994  0.627976  0.359982          1\n",
+       "2        0.539071  0.750090  0.211018          1\n",
+       "3        0.167537  0.449150  0.281613          1\n",
+       "4        0.041838  0.382879  0.341041          1\n",
+       "...           ...       ...       ...        ...\n",
+       "1577891 -1.249794 -0.986661  0.263133          2\n",
+       "1577892 -0.863930 -0.595172  0.268757          2\n",
+       "1577893 -0.986080 -0.631168  0.354913          0\n",
+       "1577894 -1.617198 -1.325552  0.291646          3\n",
+       "1577895 -0.975551 -0.767183  0.208368          0\n",
+       "\n",
+       "[1577721 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -604,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -631,7 +791,12 @@
     "            s=r\"$\\textbf{\" + settings.component_labels[c] + \"}$\",\n",
     "            c=settings.component_colors[c], transform=ax.transAxes)\n",
     "\n",
-    "for simulation in sample:\n",
+    "medians = {}\n",
+    "for of, to in abundances:\n",
+    "    for c in settings.components:\n",
+    "        medians[f\"{of}_{to}_{c}\"] = np.zeros((len(sample), 100))\n",
+    "\n",
+    "for s, simulation in enumerate(sample):\n",
     "    galaxy = parse(simulation)[0]\n",
     "    df = read_data_many(simulation, abundances, config)\n",
     "    zorder = 16 if galaxy == 6 else 15\n",
@@ -646,9 +811,23 @@
     "            pdf_x = np.linspace(ax.get_xlim()[0], ax.get_xlim()[1], 100)\n",
     "            ax.plot(pdf_x, pdf(pdf_x), lw=1.0,\n",
     "                    color=color, zorder=zorder, label=label)\n",
+    "            medians[f\"{of}_{to}_{c}\"][s, :] = pdf(pdf_x)\n",
+    "\n",
+    "for j, (of, to) in enumerate(abundances):\n",
+    "    for i, c in enumerate(settings.components):\n",
+    "        color = settings.component_colors[c]\n",
+    "        ax = axs[i, j]\n",
+    "        is_region = df[\"RegionTag\"] == i\n",
+    "        pdf = gaussian_kde(df[f\"[{of}/{to}]\"][is_region].to_numpy())\n",
+    "        pdf_x = np.linspace(ax.get_xlim()[0], ax.get_xlim()[1], 100)\n",
+    "        ax.plot(pdf_x, np.nanmedian(medians[f\"{of}_{to}_{c}\"], axis=0),\n",
+    "                lw=1.0, color=color, zorder=16, label=\"Median\",\n",
+    "                ls=(0, (5, 1)))\n",
     "\n",
     "for ax in axs.flatten():\n",
-    "    ax.legend(loc=\"upper right\", framealpha=0, fontsize=7.0)\n",
+    "    l = ax.legend(loc=\"upper left\", framealpha=0, fontsize=7.0,\n",
+    "                  bbox_to_anchor=(0.01, 0.9), bbox_transform=ax.transAxes)\n",
+    "    l.set_zorder(20)\n",
     "\n",
     "fig.savefig(\n",
     "    f\"../images/metal_abundance_distribution/\"\n",
