Minor addition for testing.

--- a/scripts/Stellar Formation Time.ipynb
+++ b/scripts/Stellar Formation Time.ipynb
@@ -9,9 +9,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/u/fiza/conda-envs/auriga/lib/python3.7/site-packages/setuptools/_importlib.py:23: UserWarning: `importlib-metadata` version is incompatible with `setuptools`.\n",
+      "This problem is likely to be solved by installing an updated version of `importlib-metadata`.\n",
+      "  warnings.warn(msg)  # Ensure a descriptive message is shown.\n"
+     ]
+    }
+   ],
    "source": [
     "from matplotlib import pyplot as plt\n",
     "import pandas as pd\n",
@@ -22,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,6 +221,23 @@
     "    axs[j + 1].plot(df[\"TimeBinCenters_Gyr\"], median, ls=(0, (5, 2)),\n",
     "                    zorder=zorder, c=settings.component_colors[c],\n",
     "                    lw=1, label=\"Median\")\n",
+    "# endregion\n",
+    "\n",
+    "# region HighlightGalaxy\n",
+    "highlight = None\n",
+    "if highlight:\n",
+    "    galaxy = parse(highlight)[0]\n",
+    "    df = pd.read_csv(f\"../results/{'_'.join(highlight.split('_')[:-1])}/\"\n",
+    "                    \"stellar_formation_time_dist.csv\")\n",
+    "    label, zorder = f\"Au{galaxy}\", 11\n",
+    "\n",
+    "    axs[0].plot(df[\"TimeBinCenters_Gyr\"], df[\"StellarAgeDist_All\"],\n",
+    "                zorder=zorder, c=\"purple\", lw=1, label=label)\n",
+    "\n",
+    "    for i, c in enumerate(settings.components):\n",
+    "        axs[i + 1].plot(df[\"TimeBinCenters_Gyr\"],\n",
+    "                        df[f\"StellarAgeDist_{c}\"],\n",
+    "                        zorder=zorder, c=\"purple\", lw=1, label=label)\n",
     "# endregion\n",
     "\n",
     "axs[0].text(\n",
