Modify figures for the RAAA 2024 proceeding.

--- a/scripts/Galaxy Decomposition.ipynb
+++ b/scripts/Galaxy Decomposition.ipynb
@@ -23,17 +23,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/u/fiza/conda-envs/auriga/lib/python3.7/site-packages/setuptools/_importlib.py:23: UserWarning: `importlib-metadata` version is incompatible with `setuptools`.\n",
-      "This problem is likely to be solved by installing an updated version of `importlib-metadata`.\n",
-      "  warnings.warn(msg)  # Ensure a descriptive message is shown.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from auriga.snapshot import Snapshot\n",
     "from auriga.images import figure_setup, set_axs_configuration\n",
@@ -116,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,25 +134,21 @@
     "\n",
     "    _, _, _, _ = ax.hist2d(\n",
     "        circularity, potential,\n",
-    "        cmap='nipy_spectral', bins=200,\n",
+    "        cmap='viridis', bins=200,\n",
     "        range=[ax.get_xlim(), ax.get_ylim()],\n",
     "        norm=mcolors.LogNorm(vmin=1E0, vmax=1E3), rasterized=True)\n",
     "    ax.text(x=0.05, y=0.95, s=r\"$\\texttt{\" + label + \"}$\",\n",
     "            size=8.0, transform=ax.transAxes, ha='left', va='top')\n",
     "\n",
     "    # Draw lines for the components\n",
-    "    ax.plot([DISC_MIN_CIRC] * 2,\n",
-    "            ax.get_ylim(),\n",
-    "            ls=\"--\", c='k')\n",
-    "    ax.plot([DISC_STD_CIRC - COLD_DISC_DELTA_CIRC] * 2,\n",
-    "            ax.get_ylim(),\n",
-    "            ls=\"--\", c='k')\n",
-    "    ax.plot([DISC_STD_CIRC + COLD_DISC_DELTA_CIRC] * 2,\n",
-    "            ax.get_ylim(),\n",
-    "            ls=\"--\", c='k')\n",
-    "    ax.plot([ax.get_xlim()[0], DISC_MIN_CIRC],\n",
-    "            [BULGE_MAX_SPECIFIC_ENERGY] * 2,\n",
-    "            ls=\"--\", c='k')\n",
+    "    ax.plot([DISC_MIN_CIRC] * 2, ax.get_ylim(),\n",
+    "            ls=\"-\", c='k', lw=.5)\n",
+    "    ax.plot([DISC_STD_CIRC - COLD_DISC_DELTA_CIRC] * 2, ax.get_ylim(),\n",
+    "            ls=\"-\", c='k', lw=.5)\n",
+    "    ax.plot([DISC_STD_CIRC + COLD_DISC_DELTA_CIRC] * 2, ax.get_ylim(),\n",
+    "            ls=\"-\", c='k', lw=.5)\n",
+    "    ax.plot([ax.get_xlim()[0], DISC_MIN_CIRC], [BULGE_MAX_SPECIFIC_ENERGY] * 2,\n",
+    "            ls=\"-\", c='k', lw=.5)\n",
     "\n",
     "    fig.savefig(\n",
     "        f\"../images/galaxy_decomposition/phase_space_{simulation}{SUFFIX}.pdf\")\n",
@@ -171,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,62 +166,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = plt.figure(figsize=(7, 8))\n",
-    "gs = fig.add_gridspec(nrows=6, ncols=4, hspace=0.0, wspace=0.0)\n",
-    "axs = gs.subplots(sharex=True, sharey=True)\n",
+    "# fig = plt.figure(figsize=(7, 8))\n",
+    "# gs = fig.add_gridspec(nrows=6, ncols=4, hspace=0.0, wspace=0.0)\n",
+    "# axs = gs.subplots(sharex=True, sharey=True)\n",
     "\n",
-    "for ax in axs.flatten():\n",
-    "    ax.tick_params(which='both', direction=\"in\")\n",
-    "    if ax == axs[-1, -1]: ax.axis(\"off\")\n",
-    "    ax.set_xlim(-1.6, 1.6)\n",
-    "    ax.set_xticks([-1, 0, 1])\n",
-    "    ax.set_ylim(-1, 0)\n",
-    "    ax.set_yticks([-.8, -.6, -.4, -.2, 0])\n",
-    "    ax.set_axisbelow(True)\n",
-    "    if ax.get_subplotspec().is_last_row() or ax == axs[-2, -1]:\n",
-    "        ax.set_xlabel(r'$\\epsilon = j_z \\, j_\\mathrm{circ}^{-1}$')\n",
-    "        ax.tick_params(labelbottom=True)\n",
-    "    if ax.get_subplotspec().is_first_col():\n",
-    "        ax.set_ylabel(r'$\\tilde{e} = e \\, \\left| e \\right|_\\mathrm{max}^{-1}$')\n",
+    "# for ax in axs.flatten():\n",
+    "#     ax.tick_params(which='both', direction=\"in\")\n",
+    "#     if ax == axs[-1, -1]: ax.axis(\"off\")\n",
+    "#     ax.set_xlim(-1.6, 1.6)\n",
+    "#     ax.set_xticks([-1, 0, 1])\n",
+    "#     ax.set_ylim(-1, 0)\n",
+    "#     ax.set_yticks([-.8, -.6, -.4, -.2, 0])\n",
+    "#     ax.set_axisbelow(True)\n",
+    "#     if ax.get_subplotspec().is_last_row() or ax == axs[-2, -1]:\n",
+    "#         ax.set_xlabel(r'$\\epsilon = j_z \\, j_\\mathrm{circ}^{-1}$')\n",
+    "#         ax.tick_params(labelbottom=True)\n",
+    "#     if ax.get_subplotspec().is_first_col():\n",
+    "#         ax.set_ylabel(r'$\\tilde{e} = e \\, \\left| e \\right|_\\mathrm{max}^{-1}$')\n",
     "\n",
-    "for i in range(len(settings.groups[\"Included\"])):\n",
-    "    ax = axs.flatten()[i]\n",
-    "    galaxy = settings.groups[\"Included\"][i]\n",
-    "    simulation = f\"au{galaxy}_or_l4_s127\"\n",
-    "    label = f\"Au{galaxy}\"\n",
-    "    circularity, potential = read_data(simulation=simulation)\n",
-    "    _, _, _, im = ax.hist2d(circularity,\n",
-    "                            potential,\n",
-    "                            cmap='nipy_spectral',\n",
-    "                            bins=200,\n",
-    "                            range=[ax.get_xlim(), ax.get_ylim()],\n",
-    "                            norm=mcolors.LogNorm(vmin=1E0, vmax=1E3),\n",
-    "                            rasterized=True)\n",
-    "    ax.text(x=0.05, y=0.95,\n",
-    "            s=r\"$\\texttt{\" + label + \"}$\",\n",
-    "            size=6.0, transform=ax.transAxes,\n",
-    "            ha='left', va='top',\n",
-    "            )\n",
+    "# for i in range(len(settings.groups[\"Included\"])):\n",
+    "#     ax = axs.flatten()[i]\n",
+    "#     galaxy = settings.groups[\"Included\"][i]\n",
+    "#     simulation = f\"au{galaxy}_or_l4_s127\"\n",
+    "#     label = f\"Au{galaxy}\"\n",
+    "#     circularity, potential = read_data(simulation=simulation)\n",
+    "#     _, _, _, im = ax.hist2d(circularity,\n",
+    "#                             potential,\n",
+    "#                             cmap='nipy_spectral',\n",
+    "#                             bins=200,\n",
+    "#                             range=[ax.get_xlim(), ax.get_ylim()],\n",
+    "#                             norm=mcolors.LogNorm(vmin=1E0, vmax=1E3),\n",
+    "#                             rasterized=True)\n",
+    "#     ax.text(x=0.05, y=0.95,\n",
+    "#             s=r\"$\\texttt{\" + label + \"}$\",\n",
+    "#             size=6.0, transform=ax.transAxes,\n",
+    "#             ha='left', va='top',\n",
+    "#             )\n",
     "\n",
-    "    # Draw lines for the components\n",
-    "    ax.plot([DISC_MIN_CIRC] * 2,\n",
-    "            ax.get_ylim(), ls=\"--\", c='k', lw=0.75)\n",
-    "    ax.plot([DISC_STD_CIRC - COLD_DISC_DELTA_CIRC] * 2,\n",
-    "            ax.get_ylim(), ls=\"--\", c='k', lw=0.75)\n",
-    "    ax.plot([DISC_STD_CIRC + COLD_DISC_DELTA_CIRC] * 2,\n",
-    "            ax.get_ylim(), ls=\"--\", c='k', lw=0.75)\n",
-    "    ax.plot([ax.get_xlim()[0], DISC_MIN_CIRC],\n",
-    "            [BULGE_MAX_SPECIFIC_ENERGY] * 2,\n",
-    "            ls=\"--\", c='k', lw=0.75)\n",
+    "#     # Draw lines for the components\n",
+    "#     ax.plot([DISC_MIN_CIRC] * 2,\n",
+    "#             ax.get_ylim(), ls=\"--\", c='k', lw=0.75)\n",
+    "#     ax.plot([DISC_STD_CIRC - COLD_DISC_DELTA_CIRC] * 2,\n",
+    "#             ax.get_ylim(), ls=\"--\", c='k', lw=0.75)\n",
+    "#     ax.plot([DISC_STD_CIRC + COLD_DISC_DELTA_CIRC] * 2,\n",
+    "#             ax.get_ylim(), ls=\"--\", c='k', lw=0.75)\n",
+    "#     ax.plot([ax.get_xlim()[0], DISC_MIN_CIRC],\n",
+    "#             [BULGE_MAX_SPECIFIC_ENERGY] * 2,\n",
+    "#             ls=\"--\", c='k', lw=0.75)\n",
     "\n",
-    "    fig.savefig(\n",
-    "        f\"../images/galaxy_decomposition/phase_space_included{SUFFIX}.pdf\")\n",
+    "#     fig.savefig(\n",
+    "#         f\"../images/galaxy_decomposition/phase_space_included{SUFFIX}.pdf\")\n",
     "\n",
-    "plt.close(fig)"
+    "# plt.close(fig)"
    ]
   }
  ],
