--- a/scripts/Abundance O.ipynb
+++ b/scripts/Abundance O.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,11 +170,11 @@
     "for ax in axs.flatten():\n",
     "    ax.grid(True, ls='-', lw=0.25, c=\"gainsboro\")\n",
     "    ax.tick_params(which='both', direction=\"in\")\n",
-    "    ax.set_xlim(-1.0, 0.8)\n",
+    "    ax.set_xlim(-1.0, 0.6)\n",
     "    ax.set_xticks([-0.8, -0.4, 0, 0.4])\n",
     "    ax.set_ylabel('[O/Fe]')\n",
-    "    ax.set_ylim(0.18, 0.32)\n",
-    "    ax.set_yticks([0.20, 0.22, 0.24, 0.26, 0.28, 0.3])\n",
+    "    ax.set_ylim(0.2, 0.32)\n",
+    "    ax.set_yticks([0.22, 0.24, 0.26, 0.28, 0.3])\n",
     "    ax.set_xlabel('[Fe/H]')\n",
     "    ax.set_axisbelow(True)\n",
     "    ax.label_outer()\n",
@@ -188,16 +188,16 @@
     "        c=\"silver\", zorder=5,\n",
     "        s=20, linewidths=0.4, edgecolors=\"white\",\n",
     "        marker=settings.component_markers[c])\n",
-    "fe_pdf = gaussian_kde(stats[f\"[Fe/H]_All\"].to_numpy(dtype=np.float64))\n",
-    "pdf_x = np.linspace(-1.0, 0.6, 100)\n",
-    "pdf_y = fe_pdf(pdf_x) / np.max(fe_pdf(pdf_x)) * 0.02 + ax.get_ylim()[0]\n",
-    "axs[0].fill_between(\n",
-    "    x=pdf_x, y1=-1.0, y2=pdf_y, edgecolor=\"black\", facecolor=\"#00000030\")\n",
-    "o_pdf = gaussian_kde(stats[f\"[O/Fe]_All\"].to_numpy(dtype=np.float64))\n",
-    "pdf_y = np.linspace(0.18, 0.32, 100)\n",
-    "pdf_x = o_pdf(pdf_y) / np.max(o_pdf(pdf_y)) * 0.3\n",
-    "axs[0].fill_betweenx(\n",
-    "    y=pdf_y, x1=-pdf_x + 0.8, x2=0.8, edgecolor=\"black\", facecolor=\"#00000030\")\n",
+    "# fe_pdf = gaussian_kde(stats[f\"[Fe/H]_All\"].to_numpy(dtype=np.float64))\n",
+    "# pdf_x = np.linspace(-1.0, 0.6, 100)\n",
+    "# pdf_y = fe_pdf(pdf_x) / np.max(fe_pdf(pdf_x)) * 0.02 + ax.get_ylim()[0]\n",
+    "# axs[0].fill_between(\n",
+    "#     x=pdf_x, y1=-1.0, y2=pdf_y, edgecolor=\"black\", facecolor=\"#00000030\")\n",
+    "# o_pdf = gaussian_kde(stats[f\"[O/Fe]_All\"].to_numpy(dtype=np.float64))\n",
+    "# pdf_y = np.linspace(0.18, 0.32, 100)\n",
+    "# pdf_x = o_pdf(pdf_y) / np.max(o_pdf(pdf_y)) * 0.3\n",
+    "# axs[0].fill_betweenx(\n",
+    "#     y=pdf_y, x1=-pdf_x + 0.8, x2=0.8, edgecolor=\"black\", facecolor=\"#00000030\")\n",
     "\n",
     "for i in range(4):\n",
     "    ax = axs.flatten()[i + 1]\n",
@@ -207,7 +207,7 @@
     "        edgecolors=\"white\", marker='o')\n",
     "    for j in range(len(settings.components)):\n",
     "        label = labels[j] if j == i else None\n",
-    "        color = colors[j] if j == i else \"silver\"\n",
+    "        color = \"black\" if j == i else \"silver\"\n",
     "        zorder = 10 if j == i else 5\n",
     "        ax.scatter(\n",
     "            stats[f\"[Fe/H]_{settings.components[j]}\"],\n",
@@ -215,25 +215,25 @@
     "            c=color, label=label, zorder=zorder,\n",
     "            s=20, linewidths=0.4, edgecolors=\"white\", marker=markers[j])\n",
     "        \n",
-    "        if j == i:\n",
-    "            fe_pdf = gaussian_kde(\n",
-    "                stats[f\"[Fe/H]_{settings.components[j]}\"].to_numpy(\n",
-    "                    dtype=np.float64))\n",
-    "            pdf_x = np.linspace(-1.0, 0.6, 100)\n",
-    "            pdf_y = fe_pdf(pdf_x) / np.max(fe_pdf(pdf_x)) * 0.02 \\\n",
-    "                + ax.get_ylim()[0]\n",
-    "            ax.fill_between(\n",
-    "                x=pdf_x, y1=-1.0, y2=pdf_y, edgecolor=color,\n",
-    "                facecolor=mcolors.TABLEAU_COLORS[color] + \"30\")\n",
+    "        # if j == i:\n",
+    "        #     fe_pdf = gaussian_kde(\n",
+    "        #         stats[f\"[Fe/H]_{settings.components[j]}\"].to_numpy(\n",
+    "        #             dtype=np.float64))\n",
+    "        #     pdf_x = np.linspace(-1.0, 0.6, 100)\n",
+    "        #     pdf_y = fe_pdf(pdf_x) / np.max(fe_pdf(pdf_x)) * 0.02 \\\n",
+    "        #         + ax.get_ylim()[0]\n",
+    "        #     ax.fill_between(\n",
+    "        #         x=pdf_x, y1=-1.0, y2=pdf_y, edgecolor=color,\n",
+    "        #         facecolor=mcolors.TABLEAU_COLORS[color] + \"30\")\n",
     "            \n",
-    "            o_pdf = gaussian_kde(\n",
-    "                stats[f\"[O/Fe]_{settings.components[j]}\"].to_numpy(\n",
-    "                    dtype=np.float64))\n",
-    "            pdf_y = np.linspace(0.18, 0.32, 100)\n",
-    "            pdf_x = o_pdf(pdf_y) / np.max(o_pdf(pdf_y)) * 0.3\n",
-    "            ax.fill_betweenx(\n",
-    "                y=pdf_y, x1=-pdf_x + 0.8, x2=0.8, edgecolor=color,\n",
-    "                facecolor=mcolors.TABLEAU_COLORS[color] + \"30\")\n",
+    "        #     o_pdf = gaussian_kde(\n",
+    "        #         stats[f\"[O/Fe]_{settings.components[j]}\"].to_numpy(\n",
+    "        #             dtype=np.float64))\n",
+    "        #     pdf_y = np.linspace(0.18, 0.32, 100)\n",
+    "        #     pdf_x = o_pdf(pdf_y) / np.max(o_pdf(pdf_y)) * 0.3\n",
+    "        #     ax.fill_betweenx(\n",
+    "        #         y=pdf_y, x1=-pdf_x + 0.8, x2=0.8, edgecolor=color,\n",
+    "        #         facecolor=mcolors.TABLEAU_COLORS[color] + \"30\")\n",
     "\n",
     "axs[0].text(\n",
     "    x=0.05, y=0.95, size=8.0, ha=\"left\", va=\"top\", s=r\"$\\textbf{All}$\",\n",
@@ -242,7 +242,7 @@
     "    axs[i + 1].text(\n",
     "        x=0.05, y=0.95, size=8.0, ha=\"left\", va=\"top\",\n",
     "        s=r\"$\\textbf{\" + settings.component_labels[c] + \"}$\",\n",
-    "        c=settings.component_colors[c], transform=axs[i + 1].transAxes)\n",
+    "        c=\"black\", transform=axs[i + 1].transAxes)\n",
     "\n",
     "fig.savefig(f\"../images/metallicity/OFe_vs_FeH_included_s127{SUFFIX}.pdf\")\n",
     "plt.close(fig)"
